--- a/admin-web/src/main/resources/redis-conf.properties
+++ b/admin-web/src/main/resources/redis-conf.properties
@@ -1,6 +1,7 @@
 #sentinels:
-sentinels=188.131.141.60:26379,188.131.144.112:26379,123.207.155.39:26379
-#sentinels=redis.zbjdl.in:26379
+#sentinels=188.131.141.60:26379,188.131.144.112:26379,123.207.155.39:26379
+#sentinels=123.207.155.39:26379
+sentinels=redis.zbjdl.in:6378
 masterName=mymaster
 maxTotal=20
 maxIdle=8
